<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/productosFragment">

    <fragment
        android:id="@+id/mercadoFragment"
        android:name="com.anys.lleve_casera_dv.MercadoFragment"
        android:label="@string/menu_mercado"
        tools:layout="@layout/fragment_mercado" >
        <action
            android:id="@+id/action_mercadoFragment_to_elementos_mercadoFragment"
            app:destination="@id/elementos_mercadoFragment" />
    </fragment>
    <fragment
        android:id="@+id/productosFragment"
        android:name="com.anys.lleve_casera_dv.ProductosFragment"
        android:label="@string/menu_producto"
        tools:layout="@layout/fragment_productos" >
        <action
            android:id="@+id/action_productosFragment_to_mercadoFragment"
            app:destination="@id/mercadoFragment" />
    </fragment>

    <fragment
        android:id="@+id/perfilFragment"
        android:name="com.anys.lleve_casera_dv.PerfilFragment"
        android:label="@string/menu_perfil"
        tools:layout="@layout/fragment_perfil" />
    <fragment
        android:id="@+id/agenciaFragment"
        android:name="com.anys.lleve_casera_dv.AgenciaFragment"
        android:label="@string/menu_agencias"
        tools:layout="@layout/fragment_agencia" >
    </fragment>
    <fragment
        android:id="@+id/carritoFragment"
        android:name="com.anys.lleve_casera_dv.CarritoFragment"
        android:label="@string/menu_carrito"
        tools:layout="@layout/fragment_carrito" >
        <action
            android:id="@+id/action_carritoFragment_to_confirmar_compraFragment"
            app:destination="@id/confirmar_compraFragment" />
    </fragment>
    <fragment
        android:id="@+id/elementos_mercadoFragment"
        android:name="com.anys.lleve_casera_dv.ElementosMercadoFragment"
        android:label="@string/titulo_felementosMercado"
        tools:layout="@layout/fragment_elementos_mercado" />
    <fragment
        android:id="@+id/confirmar_compraFragment"
        android:name="com.anys.lleve_casera_dv.Confirmar_CompraFragment"
        android:label="Confirmar Compra"
        tools:layout="@layout/fragment_confirmar_compra" >
        <action
            android:id="@+id/action_confirmar_compraFragment_to_agenciaSelectFragment"
            app:destination="@id/agenciaSelectFragment" />
    </fragment>
    <fragment
        android:id="@+id/agenciaSelectFragment"
        android:name="com.anys.lleve_casera_dv.AgenciaSelectFragment"
        android:label="fragment_agencia_select"
        tools:layout="@layout/fragment_agencia_select" />
    <activity
        android:id="@+id/mainActivity"
        android:name="com.anys.lleve_casera_dv.MainActivity"
        android:label="activity_main"
        tools:layout="@layout/activity_main" />
    <activity
        android:id="@+id/loginActivity"
        android:name="com.anys.lleve_casera_dv.LoginActivity"
        android:label="activity_login"
        tools:layout="@layout/activity_login" />
    <fragment
        android:id="@+id/loginMercadoActivity"
        android:name="com.anys.lleve_casera_dv.loginMercadoActivity"
        android:label="fragment_login_mercado_activity"
        tools:layout="@layout/fragment_login_mercado_activity" />
    <activity
        android:id="@+id/singInActivity"
        android:name="com.anys.lleve_casera_dv.SingInActivity"
        android:label="activity_sing_in"
        tools:layout="@layout/activity_sing_in" />
    <fragment
        android:id="@+id/singInActivity_vendedor"
        android:name="com.anys.lleve_casera_dv.singInActivity_vendedor"
        android:label="fragment_sing_in_activity_vendedor"
        tools:layout="@layout/fragment_sing_in_activity_vendedor" />


</navigation>